# inotify2nats

./: .aspell.pws  .gitignore  404.html  Readme.md  exampleConfig.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
API/: index.html
cpinotify/: __init__.py  cpinotify.py  loadConfiguration.py  natsClient.py  recursivewatch.py
docs/: API.md  README.md
scripts/: installEditableCpinotifyCommand
search/: search_index.json
